fixed alignment

--- a/styles/editboxes.css
+++ b/styles/editboxes.css
@@ -14,17 +14,11 @@ html, body {
 }
 
 @keyFrames fade {
-  0%{
-    box-shadow: #63f03d 5px 5px 10px;
-  }
+  0%{box-shadow: #63f03d 5px 5px 10px;}
 
-  50%{
-    box-shadow: #3053df 5px 5px 20px
-  }
+  50%{box-shadow: #3053df 5px 5px 20px}
 
-  100%{
-    box-shadow: #63f03d 5px 5px 10px;
-  }
+  100%{box-shadow: #63f03d 5px 5px 10px;}
 }
 
 #update {
